Finish BuberBreakfast tutorial

--- a/BuberBreakfast/BuberBreakfast.csproj
+++ b/BuberBreakfast/BuberBreakfast.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\BuberBreakfast.Contracts\BuberBreakfast.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Requests\" />
+  </ItemGroup>
+
 </Project>
